Added all of the tests to the Test Class

--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -11,11 +11,23 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>verifyGameCanEndInADraw</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifySpacesCannotBeClickedAfterGameEndsInDraw</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>verifyTableNotGeneratedWithInputValueLessThanEqualToZero</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
 <td>verifyGameCanEndWithAWinner</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifySpacesCannotBeClickedAfterGameEndsInWinWithRemainingEmptySpaces</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -27,7 +39,15 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
+<td>verifyPlayerCantClickAlreadySelectedSquareDuringUnfinishedGame</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>verifyNewTableNotGeneratedIfGameAlreadyStarted</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyPlayerOCanWinGame</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
