--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,34 +1,64 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="cfa8b7">  <td>21/10/14 23:32:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TicTacToeTest.closeBrowser()[pri:0, instance:tests.TicTacToeTest@1a0dcaa]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>main@644345897</td>   <td></td> </tr>
-<tr bgcolor="cfa8b7">  <td>21/10/14 23:32:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TicTacToeTest.closeBrowser()[pri:0, instance:tests.TicTacToeTest@1a0dcaa]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>main@644345897</td>   <td></td> </tr>
-<tr bgcolor="cfa8b7">  <td>21/10/14 23:32:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TicTacToeTest.closeBrowser()[pri:0, instance:tests.TicTacToeTest@1a0dcaa]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>main@644345897</td>   <td></td> </tr>
-<tr bgcolor="cfa8b7">  <td>21/10/14 23:32:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TicTacToeTest.closeBrowser()[pri:0, instance:tests.TicTacToeTest@1a0dcaa]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>main@644345897</td>   <td></td> </tr>
-<tr bgcolor="cfa8b7">  <td>21/10/14 23:32:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TicTacToeTest.closeBrowser()[pri:0, instance:tests.TicTacToeTest@1a0dcaa]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>main@644345897</td>   <td></td> </tr>
-<tr bgcolor="cfa8b7">  <td>21/10/14 23:32:34</td>   <td>-4507</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TicTacToeTest.openBrowser()[pri:0, instance:tests.TicTacToeTest@1a0dcaa]">&gt;&gt;openBrowser</td> 
-<td>&nbsp;</td>  <td>main@644345897</td>   <td></td> </tr>
-<tr bgcolor="cfa8b7">  <td>21/10/14 23:32:34</td>   <td>-4507</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TicTacToeTest.openBrowser()[pri:0, instance:tests.TicTacToeTest@1a0dcaa]">&gt;&gt;openBrowser</td> 
-<td>&nbsp;</td>  <td>main@644345897</td>   <td></td> </tr>
-<tr bgcolor="cfa8b7">  <td>21/10/14 23:32:34</td>   <td>-4507</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TicTacToeTest.openBrowser()[pri:0, instance:tests.TicTacToeTest@1a0dcaa]">&gt;&gt;openBrowser</td> 
-<td>&nbsp;</td>  <td>main@644345897</td>   <td></td> </tr>
-<tr bgcolor="cfa8b7">  <td>21/10/14 23:32:34</td>   <td>-4507</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TicTacToeTest.openBrowser()[pri:0, instance:tests.TicTacToeTest@1a0dcaa]">&gt;&gt;openBrowser</td> 
-<td>&nbsp;</td>  <td>main@644345897</td>   <td></td> </tr>
-<tr bgcolor="cfa8b7">  <td>21/10/14 23:32:34</td>   <td>-4507</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TicTacToeTest.openBrowser()[pri:0, instance:tests.TicTacToeTest@1a0dcaa]">&gt;&gt;openBrowser</td> 
-<td>&nbsp;</td>  <td>main@644345897</td>   <td></td> </tr>
-<tr bgcolor="cfa8b7">  <td>21/10/14 23:32:13</td>   <td>-25445</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TicTacToeTest.verifyGameCanEndWithAWinner()[pri:0, instance:tests.TicTacToeTest@1a0dcaa]">verifyGameCanEndWithAWinner</td> 
-  <td>main@644345897</td>   <td></td> </tr>
-<tr bgcolor="cfa8b7">  <td>21/10/14 23:32:20</td>   <td>-19005</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TicTacToeTest.verifyNewTableNotGeneratedIfGameAlreadyStarted()[pri:0, instance:tests.TicTacToeTest@1a0dcaa]">verifyNewTableNotGeneratedIfGameAlreadyStarted</td> 
-  <td>main@644345897</td>   <td></td> </tr>
-<tr bgcolor="cfa8b7">  <td>21/10/14 23:32:26</td>   <td>-12858</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TicTacToeTest.verifyTableGeneratedWithCorrectInput()[pri:0, instance:tests.TicTacToeTest@1a0dcaa]">verifyTableGeneratedWithCorrectInput</td> 
-  <td>main@644345897</td>   <td></td> </tr>
-<tr bgcolor="cfa8b7">  <td>21/10/14 23:32:32</td>   <td>-6824</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TicTacToeTest.verifyTableNotGeneratedWithInputValueLessThanEqualToZero()[pri:0, instance:tests.TicTacToeTest@1a0dcaa]">verifyTableNotGeneratedWithInputValueLessThanEqualToZero</td> 
-  <td>main@644345897</td>   <td></td> </tr>
-<tr bgcolor="cfa8b7">  <td>21/10/14 23:32:38</td>   <td>-194</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TicTacToeTest.verifyTableNotGeneratedWithNonNumericInputValue()[pri:0, instance:tests.TicTacToeTest@1a0dcaa]">verifyTableNotGeneratedWithNonNumericInputValue</td> 
-  <td>main@644345897</td>   <td></td> </tr>
+<tr bgcolor="cfa8b7">  <td>21/10/15 01:38:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TicTacToeTest.closeBrowser()[pri:0, instance:tests.TicTacToeTest@8909f18]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@1702940637</td>   <td></td> </tr>
+<tr bgcolor="cfa8b7">  <td>21/10/15 01:38:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TicTacToeTest.closeBrowser()[pri:0, instance:tests.TicTacToeTest@8909f18]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@1702940637</td>   <td></td> </tr>
+<tr bgcolor="cfa8b7">  <td>21/10/15 01:38:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TicTacToeTest.closeBrowser()[pri:0, instance:tests.TicTacToeTest@8909f18]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@1702940637</td>   <td></td> </tr>
+<tr bgcolor="cfa8b7">  <td>21/10/15 01:38:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TicTacToeTest.closeBrowser()[pri:0, instance:tests.TicTacToeTest@8909f18]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@1702940637</td>   <td></td> </tr>
+<tr bgcolor="cfa8b7">  <td>21/10/15 01:38:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TicTacToeTest.closeBrowser()[pri:0, instance:tests.TicTacToeTest@8909f18]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@1702940637</td>   <td></td> </tr>
+<tr bgcolor="cfa8b7">  <td>21/10/15 01:38:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TicTacToeTest.closeBrowser()[pri:0, instance:tests.TicTacToeTest@8909f18]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@1702940637</td>   <td></td> </tr>
+<tr bgcolor="cfa8b7">  <td>21/10/15 01:38:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TicTacToeTest.closeBrowser()[pri:0, instance:tests.TicTacToeTest@8909f18]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@1702940637</td>   <td></td> </tr>
+<tr bgcolor="cfa8b7">  <td>21/10/15 01:38:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TicTacToeTest.closeBrowser()[pri:0, instance:tests.TicTacToeTest@8909f18]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@1702940637</td>   <td></td> </tr>
+<tr bgcolor="cfa8b7">  <td>21/10/15 01:38:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TicTacToeTest.closeBrowser()[pri:0, instance:tests.TicTacToeTest@8909f18]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@1702940637</td>   <td></td> </tr>
+<tr bgcolor="cfa8b7">  <td>21/10/15 01:38:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TicTacToeTest.closeBrowser()[pri:0, instance:tests.TicTacToeTest@8909f18]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@1702940637</td>   <td></td> </tr>
+<tr bgcolor="cfa8b7">  <td>21/10/15 01:37:52</td>   <td>-9213</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TicTacToeTest.openBrowser()[pri:0, instance:tests.TicTacToeTest@8909f18]">&gt;&gt;openBrowser</td> 
+<td>&nbsp;</td>  <td>main@1702940637</td>   <td></td> </tr>
+<tr bgcolor="cfa8b7">  <td>21/10/15 01:37:52</td>   <td>-9213</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TicTacToeTest.openBrowser()[pri:0, instance:tests.TicTacToeTest@8909f18]">&gt;&gt;openBrowser</td> 
+<td>&nbsp;</td>  <td>main@1702940637</td>   <td></td> </tr>
+<tr bgcolor="cfa8b7">  <td>21/10/15 01:37:52</td>   <td>-9213</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TicTacToeTest.openBrowser()[pri:0, instance:tests.TicTacToeTest@8909f18]">&gt;&gt;openBrowser</td> 
+<td>&nbsp;</td>  <td>main@1702940637</td>   <td></td> </tr>
+<tr bgcolor="cfa8b7">  <td>21/10/15 01:37:52</td>   <td>-9213</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TicTacToeTest.openBrowser()[pri:0, instance:tests.TicTacToeTest@8909f18]">&gt;&gt;openBrowser</td> 
+<td>&nbsp;</td>  <td>main@1702940637</td>   <td></td> </tr>
+<tr bgcolor="cfa8b7">  <td>21/10/15 01:37:52</td>   <td>-9213</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TicTacToeTest.openBrowser()[pri:0, instance:tests.TicTacToeTest@8909f18]">&gt;&gt;openBrowser</td> 
+<td>&nbsp;</td>  <td>main@1702940637</td>   <td></td> </tr>
+<tr bgcolor="cfa8b7">  <td>21/10/15 01:37:52</td>   <td>-9213</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TicTacToeTest.openBrowser()[pri:0, instance:tests.TicTacToeTest@8909f18]">&gt;&gt;openBrowser</td> 
+<td>&nbsp;</td>  <td>main@1702940637</td>   <td></td> </tr>
+<tr bgcolor="cfa8b7">  <td>21/10/15 01:37:52</td>   <td>-9213</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TicTacToeTest.openBrowser()[pri:0, instance:tests.TicTacToeTest@8909f18]">&gt;&gt;openBrowser</td> 
+<td>&nbsp;</td>  <td>main@1702940637</td>   <td></td> </tr>
+<tr bgcolor="cfa8b7">  <td>21/10/15 01:37:52</td>   <td>-9213</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TicTacToeTest.openBrowser()[pri:0, instance:tests.TicTacToeTest@8909f18]">&gt;&gt;openBrowser</td> 
+<td>&nbsp;</td>  <td>main@1702940637</td>   <td></td> </tr>
+<tr bgcolor="cfa8b7">  <td>21/10/15 01:37:52</td>   <td>-9213</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TicTacToeTest.openBrowser()[pri:0, instance:tests.TicTacToeTest@8909f18]">&gt;&gt;openBrowser</td> 
+<td>&nbsp;</td>  <td>main@1702940637</td>   <td></td> </tr>
+<tr bgcolor="cfa8b7">  <td>21/10/15 01:37:52</td>   <td>-9213</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TicTacToeTest.openBrowser()[pri:0, instance:tests.TicTacToeTest@8909f18]">&gt;&gt;openBrowser</td> 
+<td>&nbsp;</td>  <td>main@1702940637</td>   <td></td> </tr>
+<tr bgcolor="cfa8b7">  <td>21/10/15 01:35:34</td>   <td>-147130</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TicTacToeTest.verifyGameCanEndInADraw()[pri:0, instance:tests.TicTacToeTest@8909f18]">verifyGameCanEndInADraw</td> 
+  <td>main@1702940637</td>   <td></td> </tr>
+<tr bgcolor="cfa8b7">  <td>21/10/15 01:35:47</td>   <td>-134499</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TicTacToeTest.verifyGameCanEndWithAWinner()[pri:0, instance:tests.TicTacToeTest@8909f18]">verifyGameCanEndWithAWinner</td> 
+  <td>main@1702940637</td>   <td></td> </tr>
+<tr bgcolor="cfa8b7">  <td>21/10/15 01:36:42</td>   <td>-79106</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TicTacToeTest.verifyNewTableNotGeneratedIfGameAlreadyStarted()[pri:0, instance:tests.TicTacToeTest@8909f18]">verifyNewTableNotGeneratedIfGameAlreadyStarted</td> 
+  <td>main@1702940637</td>   <td></td> </tr>
+<tr bgcolor="cfa8b7">  <td>21/10/15 01:36:47</td>   <td>-73953</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TicTacToeTest.verifyPlayerCantClickAlreadySelectedSquareDuringUnfinishedGame()[pri:0, instance:tests.TicTacToeTest@8909f18]">verifyPlayerCantClickAlreadySelectedSquareDuringUnfinishedGame</td> 
+  <td>main@1702940637</td>   <td></td> </tr>
+<tr bgcolor="cfa8b7">  <td>21/10/15 01:36:57</td>   <td>-63944</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TicTacToeTest.verifyPlayerOCanWinGame()[pri:0, instance:tests.TicTacToeTest@8909f18]">verifyPlayerOCanWinGame</td> 
+  <td>main@1702940637</td>   <td></td> </tr>
+<tr bgcolor="cfa8b7">  <td>21/10/15 01:37:08</td>   <td>-53213</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TicTacToeTest.verifySpacesCannotBeClickedAfterGameEndsInDraw()[pri:0, instance:tests.TicTacToeTest@8909f18]">verifySpacesCannotBeClickedAfterGameEndsInDraw</td> 
+  <td>main@1702940637</td>   <td></td> </tr>
+<tr bgcolor="cfa8b7">  <td>21/10/15 01:37:19</td>   <td>-41668</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TicTacToeTest.verifySpacesCannotBeClickedAfterGameEndsInWinWithRemainingEmptySpaces()[pri:0, instance:tests.TicTacToeTest@8909f18]">verifySpacesCannotBeClickedAfterGameEndsInWinWithRemainingEmptySpaces</td> 
+  <td>main@1702940637</td>   <td></td> </tr>
+<tr bgcolor="cfa8b7">  <td>21/10/15 01:37:35</td>   <td>-26094</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TicTacToeTest.verifyTableGeneratedWithCorrectInput()[pri:0, instance:tests.TicTacToeTest@8909f18]">verifyTableGeneratedWithCorrectInput</td> 
+  <td>main@1702940637</td>   <td></td> </tr>
+<tr bgcolor="cfa8b7">  <td>21/10/15 01:37:46</td>   <td>-15492</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TicTacToeTest.verifyTableNotGeneratedWithInputValueLessThanEqualToZero()[pri:0, instance:tests.TicTacToeTest@8909f18]">verifyTableNotGeneratedWithInputValueLessThanEqualToZero</td> 
+  <td>main@1702940637</td>   <td></td> </tr>
+<tr bgcolor="cfa8b7">  <td>21/10/15 01:37:56</td>   <td>-5190</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TicTacToeTest.verifyTableNotGeneratedWithNonNumericInputValue()[pri:0, instance:tests.TicTacToeTest@8909f18]">verifyTableNotGeneratedWithNonNumericInputValue</td> 
+  <td>main@1702940637</td>   <td></td> </tr>
 </table>
